Add members page layout

--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -219,7 +219,15 @@
             <!-- Page 2 -->
             <div class="slide-page">
                 <div class="slide-page-title">Page2 Title</div>
-                
+                <div class="widget-contents-box">
+
+                </div>
+
+            </div>
+
+            <!-- Page 3 -->
+            <div class="slide-page">
+                <div class="slide-page-title">Page3 Title</div>
                 <div class="widget-contents-box">
 
                 </div>
