--- a/raon-control/members.html
+++ b/raon-control/members.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<body>
 <style>
-.member-box {
-    width: 800px;
-    height: 300px;
-    background-color: dodgerblue;
-    padding: 5px;
+.card {
+  /* box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2); */
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  background-color: white;
 }
 
-.avatar {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    color: white;
-    display: inline-block;
+.title {
+  color: grey;
+  font-size: 18px;
 }
 
-.member-info {
-    width: 400px;
-    height: 100px;
-    background-color: green;
-    color: white;
-    display: inline-block;
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #1d1d1d;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
 }
 
-.member-work {
-    width: 504px;
-    height: 150px;
-    background-color: #1d1d1d;
-    color: white;
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
 }
 </style>
-	<div class="member-box">
-		<div class="avatar">
-
-		</div>
-		<div class="member-info">
-
-		</div>
-		<div class="member-work">
-
-		</div>
-	</div>
-  
+<body style="background-color: black;">
+<div class="card">
+    <img src="images/profile-image.svg" alt="John" style="width:100%">
+    <h1>Son, Changwook</h1>
+    <p class="title">Senior Enginner</p>
+    <p>Accelerator Control System Team</p>
+    <div style="margin: 24px 0;">
+      <a href="#"><i class="fa fa-dribbble"></i></a> 
+      <a href="#"><i class="fa fa-twitter"></i></a>  
+      <a href="#"><i class="fa fa-linkedin"></i></a>  
+      <a href="#"><i class="fa fa-facebook"></i></a> 
+    </div>
+    <p><button>Contact</button></p>
+  </div>
 </body>
 </html>
